<resources>
    <string name="app_name">YouCoolMusic 2</string>

    <string name="please_paint_text">Будьласка введіть текст!</string>
    <string name="delete_play_list">Видалити плей лист</string>
    <string name="you_exactly_want_delete_video">Ви дійсно хочете видалити відео?</string>
    <string name="successfully_append_video">✔ Успішно добавлено відео!</string>
    <string name="copy_link_to_video">✔ Скопійовано силку на відео!</string>
    <string name="copy_name_on_video">✔ Скопійовано назву відео!</string>

    <string name="loading">Загрузка...</string>
    <string name="yes">Так</string>
    <string name="no">Ні</string>
    <string name="okay">Окей</string>
    <string name="search">Шукати</string>
    <string name="to_save">Зберегти</string>
    <string name="to_cancel">Відмінити</string>

    <string name="start_video_error">Виникла помилка під час загрузки відео, можливо ви не дозволили додатку працювати поверх інших програм.
        Бажаєте перейти на сторінку для дозволу цієї функції ?</string>
    <string name="permission">Дозвіл</string>
    <string name="permission_required">Потрібен дозвіл на відображення додатка поверх інших програм.
        Бажаєте перейти на сторінку для дозволу цієї функції ?</string>
    <string name="error_internet">Виникла помилка, перевірте підключення до інтернету.</string>
    <string name="this_play_list_is_contains">Плей лист з таким іменем уже існує!</string>
    <string name="error">Виникла помилка!</string>
    <string name="error_file">Виникла помилка під час загрузки, можливо файл пошкоджений!</string>
    <string name="error_in_youtube">Виникла помилка під час загрузки, можливо відео видалено або з ним щось не так!\n
    Переключити на наступне відео ?</string>
    <string name="error_search">По вашому зипиту нічого не знайдено!</string>
    <string name="error_install">Виникла помилка під час інсталяції оновлення!</string>
    <string name="b_updates">Оновлення</string>
    <string name="update_released">Для додатка вийшло оновлення, бажаєте встановити?</string>
    <string name="permission_denies">Деякі дозволи були не підтвердженні, тому будьласка дозвольте всі для подальшої роботи додатка!</string>

    <string name="b_export">Експортувати плей лист</string>
    <string name="b_import">Замінити плей лист</string>
    <string name="b_add_play_list">Імпортувати плей лист</string>
    <string name="b_delete_play_list">Видалити всю музику</string>
    <string name="b_about">Про розробника та додаток</string>
    <string name="b_change_theme">Змінити тему</string>
    <string name="b_update">Оновити</string>

    <string name="create_play_list">Успішно збережено ваш плей лист в дерикторії DOWNLOADS з іменем: </string>
    <string name="play_list_overading">Плей лист успішно замінено!</string>
    <string name="play_list_add">Плей лист успішно додано!</string>
    <string name="not_found_play_list">Ваш плей лист не знайдено</string>
    <string name="you_exactly_want_delete_play_list">Ви дійсно хочете видалити плей лист?</string>
    <string name="you_exactly_want_delete_all_music">Ви дійсно хочете видалити всю музику?</string>
    <string name="edit_text_is_empty">Поле для тексту порожне, введіть будьласка текст!</string>
    <string name="main">Головна</string>
    <string name="name_or_performer">Назва або виконавець</string>
    <string name="downloads_update">Завантажується оновлення, будьласка зачекайте!</string>

    <string name="sort">Сортування</string>
    <string name="by_usual">По звичайному</string>
    <string name="by_growing_up">По взростанню</string>
    <string name="by_decrease">По спаданню</string>
    <string name="by_random">По випадковому</string>

    <string name="count_items">Кількість елементів</string>
    <string name="input_title">Введіть назву або id пісні</string>
    <string name="copy_video_url">Посилання на відео скопійовано!</string>

    <string name="my">© Cool_Otaku\nФедорів Назарій Петрович</string>
    <string name="developer">Розробник</string>
    <string name="music_player_is_started">✔ Музичний плеєр працює в фоновому режимі!</string>

    <string name="copy">🔗 Скопіювати</string>
    <string name="copy_url_video">🎞️ Скопіювати посилання на відео</string>
    <string name="copy_video_name">💬 Скопіювати назву відео</string>
    <string name="download_video">💾 Завантажити відео на пристрій</string>
    <string name="move_to_playlist">📝 Перемістити в інший плей лист</string>
    <string name="delete_video">🗑 Видатити відео із плей листа</string>
    <string name="delete_file">🗑 Видалити файл</string>
    <string name="file_is_delete">✔ Файл видалено!</string>

    <string name="search_in_play_list">📀 Шукати в плей листі</string>
    <string name="search_in_internet">🌐 Шукати в інтернеті</string>

    <string name="video_is_to_move_other_playlist">Відео переміщено в інший плей лист!</string>
    <string name="add_play_list">Добавити плей лист</string>
    <string name="name_play_list">Назва плей листа</string>
    <string name="select_play_list">Виберіть плей лист</string>
    <string name="mains">Головний</string>
    <string name="downloading_file_please_wait">Файл завантажується, будьласка зачекайте!</string>
    <string name="select_metod_in_download">Виберіть метод для завантаження</string>
    <string name="from_video">Із відеом</string>
    <string name="not_video">Без відео</string>
    <string name="please_add_name_to_file">Назвіть будьласка файл</string>
    <string name="select_file_play_list">Виберіть файл плей листа</string>
    <string name="about_developer">Розробник таких проектів як:\n
    ♪ Coollyator\n
    ♪ search-games.online(Додаток)\n
    ♪ YouCoolMusic\n\n
    Знання мов програмування:\n
    ♫ Java\n
    ♫ PHP\n
    ♫ JavaScript\n
    \nПроживаю м.Івано-Франківськ с.Братківці будинок і вулицю не буду палити ツ. Навчаюся на 4 курсі ВПУ№21 м.Івано-Франківська.\n
    На даний момент моє хобі це якраз програмування, люблю дивитися аніме також грати комп\'ютерні ігри.
    </string>
    <string name="app">Про додаток</string>
    <string name="about_app">Додаток створений як аналог YouTube Premium та YouTube Music.\n
    В цьому додатку ви можете прослуховувати та переглядати відео з YouTube в фоновому режимі і без реклами.
    Створювати свій плей лист та ділитися ним. Шукати музику на свій смак. І це все безкоштовно!\n\n
    Примітка:\n
    Дозвольте додатку працювати поверх інших програм, та дайте йому доступ до пам\'яті пристрою. Це для того щоб він працював!</string>
</resources>
